# magda-core

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  ANALYSIS_SUMMARY.txt  BUG_ANALYSIS_REPORT.md  CMakeLists.txt  Dockerfile  GITHUB_ISSUE_TEMPLATES.md  LOC_ANALYSIS_REPORT.md  Makefile  README.md  SECURITY.md  VISION.md  create_issues.sh  create_labels.sh  github_issues.csv  github_issues.md  loc_analysis_summary.csv  setup.sh
.claude/: settings.local.json
.claude/skills/audio-thread/: SKILL.md
.claude/skills/building/: SKILL.md
.claude/skills/crash-analysis/: SKILL.md  parse-crash.sh
.claude/skills/juce-threading/: SKILL.md
.claude/skills/valuetree/: SKILL.md
.cursor/: environment.json
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: triage.agent.md
.github/workflows/: branch-protection.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  periodic-analysis.yml  refactoring-scanner.yml  secret-scanning.yml
.pre-commit-hooks/: check-file-size.sh
agents/: CMakeLists.txt  agent_interface.cpp  agent_interface.hpp  agent_manager.cpp  agent_manager.hpp  simple_agent.cpp  simple_agent.hpp
daw/: CMakeLists.txt  command.cpp  command.hpp  magica_daw_main.cpp
daw/core/: Config.hpp  TrackInfo.hpp  TrackManager.cpp  TrackManager.hpp
daw/engine/: daw_mode_interface_impl.hpp  tracktion_engine_wrapper.cpp  tracktion_engine_wrapper.hpp
daw/interfaces/: daw_mode_interface.hpp
daw/ui/: arrangement_view.hpp  mode_switcher.hpp  performance_view.hpp
daw/ui/components/: TimelineComponent.cpp  TimelineComponent.hpp  TrackContentPanel.cpp  TrackContentPanel.hpp  TrackHeadersPanel.cpp  TrackHeadersPanel.hpp  ZoomManager.cpp  ZoomManager.hpp
daw/ui/components/common/: GridOverlayComponent.cpp  GridOverlayComponent.hpp  LayoutDebugPanel.cpp  LayoutDebugPanel.hpp  ModeSwitcher.hpp  SvgButton.cpp  SvgButton.hpp  ZoomControls.cpp  ZoomControls.hpp
daw/ui/components/timeline/: TimeRuler.cpp  TimeRuler.hpp  TimelineComponent.cpp  TimelineComponent.hpp  TimelineFiller.cpp  TimelineFiller.hpp  ZoomManager.cpp  ZoomManager.hpp  ZoomScrollBar.cpp  ZoomScrollBar.hpp
daw/ui/components/tracks/: TrackContentPanel.cpp  TrackContentPanel.hpp  TrackHeadersPanel.cpp  TrackHeadersPanel.hpp
daw/ui/dialogs/: PreferencesDialog.cpp  PreferencesDialog.hpp
daw/ui/layout/: LayoutConfig.hpp
daw/ui/panels/: FooterBar.cpp  FooterBar.hpp  LeftPanel.cpp  LeftPanel.hpp  RightPanel.cpp  RightPanel.hpp  TimelineHeaderPanel.cpp  TransportPanel.cpp  TransportPanel.hpp
daw/ui/state/: TimelineController.cpp  TimelineState.hpp
daw/ui/themes/: DarkTheme.hpp
daw/ui/views/: ArrangementView.hpp  MainView.cpp  MainView.hpp  MixerView.cpp  MixerView.hpp  PerformanceView.hpp  SessionView.cpp  SessionView.hpp
daw/ui/windows/: MainWindow.cpp  MainWindow.hpp  MenuManager.cpp  MenuManager.hpp
docs/: AUTOMATED_WORKFLOWS.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_SUMMARY.md  CODEQL_OPTIMIZATION.md  GITHUB_SETTINGS_GUIDE.md  SETUP_SUMMARY.md  ci-setup.md  devcontainer-guide.md  dual_mode_system.md  glossary.md
docs/issues/: ARCHITECTURE_DIAGRAM.md  COMPLETION_REPORT.md  HOW_TO_CREATE_ISSUE.md  README.md  SUMMARY.md  audiobridge-refactoring.md
examples/: CMakeLists.txt
include/magda/: magda.hpp
include/magda/core/: command.hpp  mcp_server.hpp  mcp_server_interface.hpp
magda/agents/: CMakeLists.txt  daw_agent.cpp  daw_agent.hpp  dsl_grammar.hpp  dsl_interpreter.cpp  dsl_interpreter.hpp  openai_client.cpp  openai_client.hpp
magda/daw/: CMakeLists.txt  command.cpp  command.hpp  magda.cpp  magda.hpp  magda_daw_main.cpp
magda/daw/audio/: AudioBridge.cpp  AudioBridge.hpp  AudioEngineOptimizer.cpp  AudioEngineOptimizer.hpp  AudioThumbnailManager.cpp  AudioThumbnailManager.hpp  ClipSynchronizer.cpp  ClipSynchronizer.hpp  CurveSnapshot.hpp  DeviceProcessor.cpp  DeviceProcessor.hpp  DrumGridPlugin.cpp  DrumGridPlugin.hpp  InstrumentRackManager.cpp  InstrumentRackManager.hpp  MagdaSamplerPlugin.cpp  MagdaSamplerPlugin.hpp  MidiActivityMonitor.cpp  MidiActivityMonitor.hpp  MidiBridge.cpp  MidiBridge.hpp  MidiSidechainMonitorPlugin.cpp  MidiSidechainMonitorPlugin.hpp  MixerController.cpp  MixerController.hpp  ModifierHelpers.hpp  ParameterManager.cpp  ParameterManager.hpp  PluginManager.cpp  PluginManager.hpp  PluginWindowBridge.cpp  PluginWindowBridge.hpp  RackSyncManager.cpp  RackSyncManager.hpp  RecordingNoteQueue.hpp  SessionClipScheduler.cpp  SessionClipScheduler.hpp  SidechainMonitorPlugin.cpp  SidechainMonitorPlugin.hpp  SidechainTriggerBus.hpp  (+5 more)
magda/daw/core/: AutomationInfo.hpp  ClipCommands.cpp  (+38 more)
magica/daw/: CMakeLists.txt
mcp/proto/: magica_daw.proto
scripts/: README_create_refactoring_issues.md  check_open_issues.py  clean-unused-includes.sh  create_refactoring_issues.py  find-unused-includes.py
src/: CMakeLists.txt  magda.cpp
src/core/: command.cpp  mcp_server.cpp
tests/: CMakeLists.txt  SharedTestEngine.hpp  SharedTestEngineCleanup.cpp  juce_tests_main.cpp  test_audio_bridge.cpp  test_audio_clip_stretch.cpp  test_audio_export.cpp  test_audio_source_length.cpp  test_audiobridge_plugin_cleanup_bug.cpp  test_audiobridge_track_limit_bug.cpp  test_auto_tempo.cpp  test_clip_commands.cpp  test_clip_resize_operations.cpp  test_clip_sync_integration_juce.cpp  test_command.cpp  test_curve_snapshot.cpp  test_device_parameter_pagination.cpp  test_drum_grid_plugin.cpp  test_export_no_assertion.cpp  test_export_no_assertion_juce.cpp  test_export_transport_stop.cpp  test_export_transport_stop_juce.cpp  test_grid_constants.cpp  test_group_tracks_and_macros.cpp  test_interfaces.cpp  test_looped_waveform_tile.cpp  test_midi_clip_split.cpp  test_midi_clip_sync.cpp  test_midi_offset.cpp  test_midi_recording_juce.cpp  test_modulation.cpp  test_multi_out_tracks.cpp  test_nested_racks.cpp  test_parameter_utils.cpp  test_plugin_format.cpp  test_project_serialization.cpp  test_rack_audio.cpp  test_scan_report.cpp  test_session_clip_playback.cpp  test_sidechain_triggers.cpp  (+4 more)
(+271 files in other folders)
